[package]
name = "mc-core"
version = "2.0.0"
authors = ["MobileCoin"]
edition = "2021"
description = "MobileCoin Core Library"
readme = "README.md"

[features]
bip39 = [ "tiny-bip39", "slip10_ed25519" ]
alloc = [ "mc-crypto-ring-signature/alloc" ]
internals = [ ]
protos = [ "prost" ]
serde = [ "dep:serde", "mc-core-types/serde" ]
default = [ "bip39" ]

[dependencies]
hkdf = "0.12.3"
sha2 = { version = "0.10", default-features = false }
base64 = { version = "0.13.0", default-features = false }
prost = { version = "0.11.0", optional = true }
heapless = "0.7.16"

mc-core-types = { path = "./types" }
mc-crypto-keys = { path = "../crypto/keys", default-features = false }
mc-crypto-platform = { path = "../crypto/platform", default_features = false }
mc-crypto-digestible = { path = "../crypto/digestible", default_features = false }
mc-crypto-hashes = { path = "../crypto/hashes", default_features = false }
mc-crypto-ring-signature = { path = "../crypto/ring-signature", default_features = false, features = ["internals"] }
#mc-account-keys-types = { path = "../account-keys/types", default_features = false }
#mc-util-repr-bytes = { path = "../util/repr-bytes", default-features = false }

#mc-transaction-core = { path = "../transaction/core", default_features = false }

zeroize = { version = "1.5", default-features = false }

curve25519-dalek = { version = "4.0.0-pre.2", default-features = false }
ed25519-dalek = { version = "2.0.0-pre.1", default-features = false }
x25519-dalek = { version = "2.0.0-pre.2", default-features = false }

tiny-bip39 = { version = "1.0", optional = true }
slip10_ed25519 = { version = "0.1", optional = true }
serde = { version = "*", optional = true, default_features = false, features = [ "derive" ] }

[build-dependencies]
prost-build = "0.10.1"
glob = "0.3.0"
anyhow = "1.0.57"

[dev-dependencies]
serde = { version = "1.0.0", features = [ "derive" ] }
hex = { version = "0.4.3" }
#mc-test-vectors-account-keys = { path = "../test-vectors/account-keys" }
#mc-util-test-helper = { path = "../util/test-helper" }

mc-util-test-vector = { path = "../util/test-vector" }
mc-util-test-with-data = { path = "../util/test-with-data" }
mc-test-vectors-definitions = { path = "../test-vectors/definitions" }

[[test]]
name = "slip10"
path = "tests/slip10.rs"
required-features = [ "bip39" ]
