[package]
name = "mc-core-types"
version = "2.0.0"
authors = ["MobileCoin"]
edition = "2021"
description = "MobileCoin Core Library"
readme = "README.md"

[features]
serde = [ "dep:serde" ]

[dependencies]
zeroize = { version = "1.5", default-features = false }
serde = { version = "1.0.144", optional = true, default_features = false, features = [ "derive" ] }
rand_core = { version = "*", default_features = false }

curve25519-dalek = { version = "4.0.0-pre.2", default-features = false }
ed25519-dalek = { version = "2.0.0-pre.1", default-features = false }

mc-crypto-keys = { path = "../../crypto/keys", default-features = false }
