[package]
name = "mc-crypto-platform"
description = "MobileCoin Crypto Platform Configurator Package"
version = "0.1.0"
authors = ["MobileCoin"]
edition = "2021"

[features]

serde = [ "curve25519-dalek/serde", "ed25519-dalek/serde" ]

[dependencies]

curve25519-dalek = { version = "4.0.0-pre.2", default-features = false, features = [ "nightly"] }
ed25519-dalek = { version = "2.0.0-pre.1", default-features = false, features = ["nightly"] }
