[package]
name = "mc-crypto-ring-signature"
version = "2.0.0"
authors = ["MobileCoin"]
edition = "2021"
readme = "README.md"

[features]
alloc = [ "serde/alloc", "mc-crypto-digestible/alloc", "mc-util-repr-bytes/alloc", "curve25519-dalek/alloc", "ed25519-dalek/alloc", "mc-transaction-types/alloc" ]
serde = [ "dep:serde", "curve25519-dalek/serde", "ed25519-dalek/serde" ]
prost = [ "dep:prost", "mc-crypto-keys/prost" ]
heapless = [ "dep:heapless", "mc-crypto-digestible/heapless" ]
internals = []
default = [ "alloc", "serde", "prost", "mc-util-repr-bytes/default", "mc-crypto-hashes/default" ]

[dependencies]
# External dependencies
displaydoc = { version = "0.2", default-features = false }
hex_fmt = { version = "0.3", default-features = false }
# Enable all default features not known to break code coverage builds
proptest = { version = "1.0", default-features = false, features = ["default-code-coverage"], optional = true }
prost = { version = "0.11", optional = true, default-features = false, features = ["prost-derive"] }
rand_core = { version = "0.6", default-features = false }
serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }
subtle = { version = "2.4.1", default-features = false, features = ["i128"] }
zeroize = { version = "1", default-features = false }
static_assertions = "1.1.0"
heapless = { version = "*", optional = true }

# MobileCoin dependencies
mc-account-keys-types = { path = "../../account-keys/types", default-features = false }
mc-core-types = { path = "../../core/types", default-features = false }
#mc-account-keys = { path = "../../account-keys", default-features = false }
mc-crypto-digestible = { path = "../../crypto/digestible", default-features = false, features = ["dalek", "derive"] }
mc-crypto-platform = { path = "../../crypto/platform" }
mc-crypto-hashes = { path = "../../crypto/hashes", default-features = false }
mc-crypto-keys = { path = "../../crypto/keys", default-features = false }
mc-transaction-types = { path = "../../transaction/types", default-features = false }
mc-util-from-random = { path = "../../util/from-random" }
mc-util-repr-bytes = { path = "../../util/repr-bytes", default_features = false }

curve25519-dalek = { version = "4.0.0-pre.2", default-features = false, features = ["nightly"] }
ed25519-dalek = { version = "2.0.0-pre.1", default-features = false, features = ["nightly"] }

[dev-dependencies]
proptest = { version = "1.0", default-features = false, features = ["default-code-coverage"] }
tempdir = "0.3"

mc-crypto-keys = { path = "../../crypto/keys", default-features = false, features = [ "prost" ] }
mc-account-keys = { path = "../../account-keys", default-features = false, features = [ "prost" ] }
mc-crypto-digestible-test-utils = { path = "../../crypto/digestible/test-utils" }
mc-util-serial = { path = "../../util/serial", features = ["std"] }
mc-util-test-helper = { path = "../../util/test-helper" }
