[package]
name = "mc-transaction-types"
version = "4.0.0-pre0"
authors = ["MobileCoin"]
edition = "2021"
readme = "README.md"

[features]
serde = ["dep:serde", "mc-core-types/serde", "mc-crypto-ring-signature/serde" ]
prost = ["dep:prost", "mc-core-types/prost", "mc-crypto-ring-signature/prost" ]
alloc = ["serde?/alloc", "mc-core-types/alloc" ]
default = ["serde", "alloc", "mc-core-types/default", "mc-crypto-dalek/default" ]

[dependencies]
# External dependencies
displaydoc = { version = "0.2", default-features = false }

# MobileCoin dependencies
mc-core-types = { path = "../../core/types", default-features = false }
mc-crypto-dalek = { path = "../../crypto/dalek", default_features = false }
mc-crypto-digestible = { path = "../../crypto/digestible", default-features = false, features = ["dalek", "derive"] }
mc-crypto-keys = { path = "../../crypto/keys", default_features = false }
mc-crypto-ring-signature = { path = "../../crypto/ring-signature", default-features = false }

serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }
prost = { version = "*", optional = true, default-features = false }
subtle = { version = "2.4.1", default-features = false, features = ["i128"] }
zeroize = { version = "1", default-features = false }
