[package]
name = "mc-util-zip-exact"
version = "4.0.2"
authors = ["MobileCoin"]
edition = "2021"
description = "An iterator helper"
license = "Apache-2.0"
readme = "README.md"

[features]
serde = [ "dep:serde" ]
default = [ "serde" ]

[dependencies]
serde = { version = "1.0", optional = true, default-features = false }
